[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game_FoodEater/Scripts/FoodEaterOptions.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/label_font_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/UI/back_image.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/eat.wav" type="AudioStream" id=5]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 140.0
margin_top = 130.0
margin_right = 540.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 400.0
margin_bottom = 405.0

[node name="ShowGridLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 85.0
theme = ExtResource( 3 )
text = "Show grid"

[node name="HeadLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 400.0
margin_bottom = 174.0
theme = ExtResource( 3 )
text = "Snake head "

[node name="TailLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 400.0
margin_bottom = 263.0
theme = ExtResource( 3 )
text = "Snake tail"

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 400.0
margin_bottom = 405.0
texture_normal = ExtResource( 4 )

[node name="ShowGridCheck" type="CheckBox" parent="."]
margin_left = 499.0
margin_top = 147.0
margin_right = 523.0
margin_bottom = 171.0
rect_scale = Vector2( 2.2, 2.2 )
pressed = true
__meta__ = {
"_edit_lock_": true
}

[node name="HeadColor" type="ColorPickerButton" parent="."]
margin_left = 470.0
margin_top = 241.0
margin_right = 540.0
margin_bottom = 281.0
rect_min_size = Vector2( 70, 40 )
color = Color( 0.72, 0, 0.13, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TailColor" type="ColorPickerButton" parent="."]
margin_left = 470.0
margin_top = 329.0
margin_right = 540.0
margin_bottom = 369.0
rect_min_size = Vector2( 70, 40 )
color = Color( 0.59, 0, 0.13, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="ShowGridCheck" to="." method="_on_ShowGridCheck_toggled"]
[connection signal="color_changed" from="HeadColor" to="." method="_on_HeadColor_color_changed"]
[connection signal="color_changed" from="TailColor" to="." method="_on_TailColor_color_changed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
